[3.0.5]
        * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
        * [CHANGE]: Populate dialog has now progress bar when working.
        * [CHANGE]: Enhanced SQL formatter to format CREATE TRIGGER statements in a bit more readable way.
        * [BUGFIX]: Fixed crash when closing Populate Dialog while populating was in progress.
        * [BUGFIX]: Fixed warning messages when there was a problem with restoring windows from last session. A message contains now window name that caused problem.
        * [BUGFIX]: #2830 Closing database list made impossible.
        * [BUGFIX]: #2829 Fixed support for DEFERRABLE (and related) keywords in foreign keys.
        * [BUGFIX]: #2827 Release a file after import.
        * [BUGFIX]: #2826 Fixed bug in SQL formatter causing 'expr ISNULL' expressions to disappear.

[3.0.4]
        * [ADDED]: Import dialog has now "Ignore errors" option, to skip rows that causes problems (constraint violation, wrong column count, etc).
        * [CHANGE]: Enhanced Copy&Paste capabilities of data grid, so copying and pasting internally in SQLiteStudio will not be limited by TSV format (NULL values will be distinguished, tab characters will be allowed in values), only pasting from outside will be affected by TSV limitations.
        * [CHANGE]: "Invalid database" icon changed, so it's no longer confusing with "Connected" database.
        * [CHANGE]: "Databases" panel cannot be closed/hidden anymore.
        * [CHANGE]: Database dialog reorganized to look a bit nicer, db type moved to top, URL browse button for file is now separated to 2 buttons.
        * [BUGFIX]: #2795 XmlExport plugin: Fixed crash that happend in most exports.
        * [BUGFIX]: XmlExport plugin: Fixed column number attribute incrementing for data rows.