@@ -191,5 +191,6 @@
         <file>img/go_back.png</file>
         <file>img/reset_autoincrement.png</file>
         <file>img/plus.png</file>
+        <file>img/erase_table_data.png</file>
     </qresource>
 </RCC>
