@@ -1,4 +1,5 @@
 [3.0.5]
+        * [ADDED]: #2831 Ported 'Erase table data' feature (in table's context menu) from version 2.1.5.
         * [CHANGE]: Data view has now a 'cover' with progress bar when commiting more changes at once. This eliminates weird GUI freeze when commiting lots of new/deleted rows.
         * [CHANGE]: Populate dialog has now progress bar when working.
         * [CHANGE]: Enhanced SQL formatter to format CREATE TRIGGER statements in a bit more readable way.
